feat: Improvements to http client, cloudflare detection and other stuff